--- a/pandas_training.ipynb
+++ b/pandas_training.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Getting the Data"
+    "### Get the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "2    honda   White"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "9           9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -591,15 +591,15 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# To export the data without creating a new index column use the following\n",
-    "car_sales.to_csv('exported-car-sales-2', index=False)\n",
-    "car_sales_3 = pd.read_csv('exported-car-sales-2')\n",
+    "car_sales.to_csv('exported-car-sales-2.csv', index=False)\n",
+    "car_sales_3 = pd.read_csv('exported-car-sales-2.csv')\n",
     "car_sales_3"
    ]
   },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "Index(['Make', 'Colour', 'Odometer (KM)', 'Doors', 'Price'], dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "RangeIndex(start=0, stop=10, step=1)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "(10, 5)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "max    213095.000000   5.000000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
        "10"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,6 +885,373 @@
    "source": [
     "len(car_sales)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Select and View Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>150043</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>87899</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$5,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>32549</td>\n",
+       "      <td>3</td>\n",
+       "      <td>$7,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>11179</td>\n",
+       "      <td>5</td>\n",
+       "      <td>$22,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>213095</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$3,500.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors       Price\n",
+       "0  Toyota  White         150043      4   $4,000.00\n",
+       "1   Honda    Red          87899      4   $5,000.00\n",
+       "2  Toyota   Blue          32549      3   $7,000.00\n",
+       "3     BMW  Black          11179      5  $22,000.00\n",
+       "4  Nissan  White         213095      4   $3,500.00"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Shows the first 5 indexed rows by default\n",
+    "car_sales.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>150043</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>87899</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$5,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>32549</td>\n",
+       "      <td>3</td>\n",
+       "      <td>$7,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>11179</td>\n",
+       "      <td>5</td>\n",
+       "      <td>$22,000.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors       Price\n",
+       "0  Toyota  White         150043      4   $4,000.00\n",
+       "1   Honda    Red          87899      4   $5,000.00\n",
+       "2  Toyota   Blue          32549      3   $7,000.00\n",
+       "3     BMW  Black          11179      5  $22,000.00"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can add a parameter to .head() to change how many indexed rows\n",
+    "# are shown from the first indexed row\n",
+    "car_sales.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>99213</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$4,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>45698</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$7,500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>54738</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$7,000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$6,250.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>31600</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$9,700.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors      Price\n",
+       "5  Toyota  Green          99213      4  $4,500.00\n",
+       "6   Honda   Blue          45698      4  $7,500.00\n",
+       "7   Honda   Blue          54738      4  $7,000.00\n",
+       "8  Toyota  White          60000      4  $6,250.00\n",
+       "9  Nissan  White          31600      4  $9,700.00"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Shows the last 5 indexed rows from the last indexed row by default\n",
+    "car_sales.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$6,250.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>White</td>\n",
+       "      <td>31600</td>\n",
+       "      <td>4</td>\n",
+       "      <td>$9,700.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors      Price\n",
+       "8  Toyota  White          60000      4  $6,250.00\n",
+       "9  Nissan  White          31600      4  $9,700.00"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# As with .head() you can add your own parameter to .tail()\n",
+    "car_sales.tail(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
