--- a/pandas_training.ipynb
+++ b/pandas_training.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "2    honda   White"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "9           9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "Index(['Make', 'Colour', 'Odometer (KM)', 'Doors', 'Price'], dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "RangeIndex(start=0, stop=10, step=1)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "(10, 5)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "max    213095.000000   5.000000"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
        "10"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "4  Nissan  White         213095      4   $3,500.00"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "3     BMW  Black          11179      5  $22,000.00"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "9  Nissan  White          31600      4  $9,700.00"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
        "9  Nissan  White          31600      4  $9,700.00"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
        "'cow'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1455,7 @@
        "3     BMW  Black          11179      5  $22,000.00"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
        "Name: Make, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "Name: Make, dtype: object"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
        "Name: Make, dtype: object"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
        "8  Toyota  White          60000      4  $6,250.00"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
        "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1852,7 +1852,7 @@
        "Toyota  1  3  0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
        "Toyota   85451.250000   3.75"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +1953,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2016,40 +2016,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     4000.0\n",
-       "1     5000.0\n",
-       "2     7000.0\n",
-       "3    22000.0\n",
-       "4     3500.0\n",
-       "5     4500.0\n",
-       "6     7500.0\n",
-       "7     7000.0\n",
-       "8     6250.0\n",
-       "9     9700.0\n",
-       "Name: Price, dtype: float64"
+       "0     4000\n",
+       "1     5000\n",
+       "2     7000\n",
+       "3    22000\n",
+       "4     3500\n",
+       "5     4500\n",
+       "6     7500\n",
+       "7     7000\n",
+       "8     6250\n",
+       "9     9700\n",
+       "Name: Price, dtype: int32"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Handling data that is non numeric example the Price column\n",
+    "# This actually about manipulating data\n",
     "car_sales['Price'] = car_sales['Price'].replace(r'[\\$\\,\\.]', '', regex=True).astype(int)\n",
     "car_sales['Price'] = car_sales['Price'] / 100\n",
+    "car_sales['Price'] = car_sales['Price'].astype(int)\n",
     "car_sales['Price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2060,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2079,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2090,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     },
